vzcalc.8: fix a typo
resourses -> resources

Reported by Jeff Blasius:
http://forum.openvz.org/index.php?t=rview&goto=25635#msg_25635

Signed-off-by: Vasily Averin <vvs@openvz.org>

--- a/man/vzcalc.8
+++ b/man/vzcalc.8
@@ -14,9 +14,9 @@ displayed. High utilization values (>100%) mean the system is overloaded
 .IP \fBCurrent\fR 4
 shows the amount of the resources consumed by the VE at a given time.
 .IP \fBPromised\fR 4
-shows the resourses soft limit values "promised" for a given VE.
+shows the resources soft limit values "promised" for a given VE.
 .IP \fBMax\ \fR 4
-shows the resourses hard limit values "promised" for a given VE.
+shows the resources hard limit values "promised" for a given VE.
 .P
 If the \fB-v\fR option is specified, the additional information is displayed.
 .IP \fBLow\ Mem\fR 4
