man: VE -> container, SWsoft->Parallels renaming madness
* Virtual Environment (VE) is renamed to container (CT).
* SWsoft is now Parallels, Inc.
* Updated copyright years.

Fix a number of mistypes and other glitches in the process.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/man/arpsend.8
+++ b/man/arpsend.8
@@ -1,4 +1,4 @@
-.TH arpsend 8 "12 Sep 2006" "OpenVZ" "Virtual Environments"
+.TH arpsend 8 "22 Feb 2008" "OpenVZ" "Containers"
 .SH NAME
 arpsend \- utility to send ARP requests.
 .\" to detect or update neighbours ARP cashes with given IP.
@@ -60,4 +60,4 @@ not \fBLOOPBACK\fR flags in interface parameters).
 .SH SEE ALSO
 .BR vzctl (8),
 .SH LICENSE
-Copyright (C) 2000-2007, SWsoft. Licensed under GNU GPL.
+Copyright (C) 2000-2008, Parallels, Inc. Licensed under GNU GPL.
