--- a/man/vzcpucheck.8
+++ b/man/vzcpucheck.8
@@ -1,4 +1,4 @@
-.TH vzcpucheck 8 "12 Sep 2006" "OpenVZ" "Virtual Environments"
+.TH vzcpucheck 8 "22 Feb 2008" "OpenVZ" "Containers"
 .SH NAME
 vzcpucheck \- shows information about the CPU power and utilization.
 .SH SYNOPSIS
@@ -7,10 +7,10 @@ vzcpucheck [\fI-v\fR]
 This script outputs information on the CPU power and utilization.
 .SH OPTIONS
 .IP \fB-v\fR
-Display information for each VE.
+Display information for each container.
 .SH RETURN CODE
 Returns 0 upon success.
 .SH SEE ALSO
 .BR vzctl (8).
 .SH LICENSE
-Copyright (C) 2000-2007, SWsoft. Licensed under GNU GPL.
+Copyright (C) 2000-2008, Parallels, Inc. Licensed under GNU GPL.
