--- a/man/vzmemcheck.8
+++ b/man/vzmemcheck.8
@@ -1,11 +1,11 @@
-.TH vzmemcheck 8 "12 Sep 2006" "OpenVZ" "Virtual Environments"
+.TH vzmemcheck 8 "22 Feb 2008" "OpenVZ" "Containers"
 .SH NAME
-vzmemcheck \- utility to display information of node memory parameters.
+vzmemcheck \- utility to display information of node memory parameters
 .SH SYNOPSIS
 vzmemcheck [\fB-v\fR] [\fB-A\fR]
 .SH OPTIONS
 .IP \fB-v\fR 4
-Display information for each VE.
+Display information for each container.
 .IP \fB-A\fR 4
 Display absolute values (in megabytes).
 .SH DESCRIPTION
@@ -20,4 +20,4 @@ the numerator and the denominator of the corresponding fraction.
 .SH DIAGNOSTICS
 Normally, exit status is 0. On error, exit status is 1.
 .SH LICENSE
-Copyright (C) 2000-2007, SWsoft. Licensed under GNU GPL.
+Copyright (C) 2000-2008, Parallels, Inc. Licensed under GNU GPL.
