--- a/man/vzpid.8
+++ b/man/vzpid.8
@@ -1,16 +1,16 @@
-.TH vzpid 8 "12 Sep 2006" "OpenVZ" "Virtual Environments"
+.TH vzpid 8 "22 Feb 2008" "OpenVZ" "Containers"
 .SH NAME
-vzpid \- display the VE ID given the process ID (PID).
+vzpid \- display the CT ID given the process ID (PID).
 .SH SYNOPSIS
 vzpid [\fB-h\fR] [\fIpid\fR [...]]
 .SH DESCRIPTION
-This script displays the VE ID the process with the given \fIpid\fR belongs to.
+This script displays the CT ID the process with the given \fIpid\fR belongs to.
 .SH OPTIONS
 .IP \fIpid\fR
-The \fIpid\fR of the process to display the VE ID of.
+The \fIpid\fR of the process to display the CT ID of.
 .SH RETURN CODE
 Returns 0 upon a successful execution.
 .SH SEE ALSO
 .BR vzctl (8).
 .SH LICENSE
-Copyright (C) 2000-2007, SWsoft. Licensed under GNU GPL.
+Copyright (C) 2000-2008, Parallels, Inc. Licensed under GNU GPL.
