--- a/man/vps.conf.5
+++ b/man/vps.conf.5
@@ -1,12 +1,12 @@
-.TH vps.conf 5 "12 Sep 2006" "OpenVZ" "Virtual Environments"
+.TH vps.conf 5 "22 Feb 2008" "OpenVZ" "Containers"
 .SH NAME
-vps.conf \- configuration file for a Virtual Environment.
+vps.conf \- configuration file for an OpenVZ container.
 .SH SYNOPSIS
 /etc/vz/conf/XXX.conf
 .SH DESCRIPTION
-This is a configuration file for a VE. It is stored as
-\fB/etc/vz/conf/\fR\fIveid\fB.conf\fR, where \fIveid\fR
-is the ID of the given VE.
+This is a configuration file for a container. It is stored as
+\fB/etc/vz/conf/\fR\fICTID\fB.conf\fR, where \fICTID\fR
+is the numeric ID of the given container.
 .PP
 Configuration file consists of lines in the form
 .PP
@@ -24,8 +24,8 @@ the appropriate \fBvzctl set\fR option is given.
 .IP \fBNAME\fR="\fIvename\fR"
 Corresponds to the \fB--name\fR option.
 .IP \fBONBOOT\fR="\fByes\fR|\fBno\fR"
-Specifies whether this VE will be started during system bootup.
-Default is \fBno\fR, meaning VE will not be started
+Specifies whether this container will be started during system bootup.
+Default is \fBno\fR, meaning the container will not be started
 if \fBONBOOT\fR parameter is omitted.
 Corresponds to the \fB--onboot\fR option.
 .IP \fBOSTEMPLATE\fR="\fItmpl_name\fR"
@@ -37,9 +37,9 @@ Corresponds to the \fB--private\fR option.
 .IP \fBDISABLED\fR="\fByes\fR|\fBno\fR"
 Corresponds to the \fB--disabled\fR option.
 .IP \fBORIGIN_SAMPLE\fR="\fIname\fR"
-Name of VE sample config which the VE is based on.
+Name of container sample config which the container is based on.
 .IP \fBCONFIG_CUSTOMIZED\fR="\fByes\fR|\fBno\fR"
-Set to \fByes\fR if the VE config was modified.
+Set to \fByes\fR if the container config was modified.
 .SS Resource management parameters
 .IP \fBNUMPROC\fR
 Corresponds to the \fB--numproc\fR options.
@@ -95,7 +95,7 @@ Corresponds to the \fB--noatime\fR option.
 Corresponds to the \fB--capability\fR option
 .SS Network related parameters
 .IP \fBIP_ADDRESS\fR="\fIaddress\ [address]\fR"
-Specifies the \fIaddress\fR the VE will be assigned. Several addresses
+Specifies the \fIaddress\fR the container will be assigned. Several addresses
 are divided by spaces.
 Corresponds to the \fB--ipadd\fR option.
 .IP \fBHOSTNAME\fR="\fIname\fR"
@@ -110,4 +110,4 @@ are divided by spaces.
 .BR vzctl (8),
 .BR vz.conf (5).
 .SH LICENSE
-Copyright (C) 2001-2007 by SWsoft. Licensed under GNU GPL.
+Copyright (C) 2001-2008, Parallels, Inc. Licensed under GNU GPL.
