--- a/man/vzcalc.8
+++ b/man/vzcalc.8
@@ -1,22 +1,22 @@
-.TH vzcalc 8 "12 Sep 2006" "OpenVZ" "Virtual Environments"
+.TH vzcalc 8 "22 Feb 2008" "OpenVZ" "Containers"
 .SH NAME
-vzcalc \- utility to calculate the VE resources usage.
+vzcalc \- utility to calculate the container's resources usage.
 .SH SYNOPSIS
 vzcalc [\fB-v\fR] <\fBvpsid\fR>
 .SH OPTIONS
 .IP \fB-v\fR 4
 Display additional information.
 .SH DESCRIPTION
-This utility displays the share of the Hardware Node resources a particular
-Virtual Environment is using. If the VE is running, the current usage is
+This utility displays the share of the host system resources a particular
+container is using. If the container is running, the current usage is
 displayed. High utilization values (>100%) mean the system is overloaded
-(or the VE has an invalid configuration).
+(or the container has an invalid configuration).
 .IP \fBCurrent\fR 4
-shows the amount of the resources consumed by the VE at a given time.
+shows the amount of the resources consumed by the container at a given time.
 .IP \fBPromised\fR 4
-shows the resources soft limit values "promised" for a given VE.
+shows the resources soft limit values "promised" for a given container.
 .IP \fBMax\ \fR 4
-shows the resources hard limit values "promised" for a given VE.
+shows the resources hard limit values "promised" for a given container.
 .P
 If the \fB-v\fR option is specified, the additional information is displayed.
 .IP \fBLow\ Mem\fR 4
@@ -26,8 +26,9 @@ whole RAM
 .IP \fBMem+Swap\fR 4
 amount of memory available for applications (both RAM and swap space).
 .IP \fBAlloc\ Mem\fR 4
-standard memory allocations made for applications in a VE. This is a more "virtual" system resource than RAM or RAM and swap.
+standard memory allocations made for applications in a container.
+This is a more "virtual" system resource than RAM or RAM and swap.
 .SH DIAGNOSTICS
 Normally, the exit status is 0. On error, the exit status is 1.
 .SH LICENSE
-Copyright (C) 2000-2007, SWsoft. Licensed under GNU GPL.
+Copyright (C) 2000-2008, Parallels, Inc. Licensed under GNU GPL.
