--- a/man/vzctl.8
+++ b/man/vzctl.8
@@ -1,29 +1,29 @@
-.TH vzctl 8 "12 Jan 2007" "OpenVZ" "Virtual Environments"
+.TH vzctl 8 "22 Feb 2008" "OpenVZ" "Containers"
 .SH NAME
-vzctl \- utility to control a Virtual Environment.
+vzctl \- utility to control an OpenVZ container.
 .SH SYNOPSIS
-vzctl [\fIflags\fR] \fBcreate\fR \fIveid\fR
+vzctl [\fIflags\fR] \fBcreate\fR \fICTID\fR
 \fB--ostemplate\fR \fIname\fR] [\fB--config\fR \fIname\fR]
 [\fB--private\fR \fIpath\fR] [\fB--root\fR \fIpath\fR] [\fB--ipadd\fR \fIaddr\fR] [\fB--hostname\fR \fIname\fR]
 .PP
-vzctl [\fIflags\fR] \fBset\fR \fIveid\fR [\fIparameters\fR] [\fB--save\fR]
+vzctl [\fIflags\fR] \fBset\fR \fICTID\fR [\fIparameters\fR] [\fB--save\fR]
 .PP
 vzctl [\fIflags\fR] \fBdestroy\fR | \fBmount\fR | \fBumount\fR |
 \fBstart\fR | \fBstop\fR | \fBrestart\fR |
-\fBstatus\fR | \fBenter\fR \fIveid\fR
+\fBstatus\fR | \fBenter\fR \fICTID\fR
 .PP
-vzctl [\fIflags\fR] \fBexec\fR | \fBexec2\fR \fIveid\fR
+vzctl [\fIflags\fR] \fBexec\fR | \fBexec2\fR \fICTID\fR
 \fIcommand\fR [\fIarg\fR ...]
 .PP
-vzctl \fBrunscript\fR \fIveid\fR \fIscript\fR
+vzctl \fBrunscript\fR \fICTID\fR \fIscript\fR
 .PP
 vzctl \fB--help\fR | \fB--version\fR
 .SH DESCRIPTION
-Utility \fBvzctl\fR runs on Hardware Node (HN) and performs direct
-manipulations with Virtual Environments (VEs).
+Utility \fBvzctl\fR runs on the host system (otherwise known as Hardware Node,
+or HN) and performs direct manipulations with containers (CTs).
 .PP
-Virtual Environments can be referred to by either numeric \fIveid\fR or
-by name (see \fB--name\fR option). Note that VE ID <= 100 are reserved for
+Containers can be referred to by either numeric \fICTID\fR or
+by name (see \fB--name\fR option). Note that CT ID <= 100 are reserved for
 OpenVZ internal purposes.
 .SH OPTIONS
 .SS Flags
@@ -32,96 +32,105 @@ These flags can be used with almost any option.
 Disables logging to log file and screen.
 .IP \fB--verbose\fR 4
 Sets logging level to maximum value.
-.SS Setting VE parameters
-.IP "\fBset\fR \fIveid\fR [\fIparameters\fR] [\fB--save\fR]" 4
-This command sets various VE parameters. If flag \fB--save\fR is given,
-parameters are saved in VE configuration file \fBvps.conf\fR(5).
-If VE is currently running, \fBvzctl\fR applies these parameters to VE.
+.SS Setting container parameters
+.IP "\fBset\fR \fICTID\fR [\fIparameters\fR] [\fB--save\fR]" 4
+This command sets various container parameters. If a \fB--save\fR flag is given,
+parameters are saved in container configuration file \fBvps.conf\fR(5).
+If a container is currently running, \fBvzctl\fR applies these parameters
+to the container.
 
 The following options can be used with \fBset\fR command.
 .TP
 \fBMiscellaneous parameters\fR
 .TP
 \fB--onboot\fR \fIyes\fR|\fIno\fR
-Sets whether this VE will be started during system boot up. VE will not be
-auto-started during system boot up unless this parameter is set to \fIyes\fR.
+Sets whether this container will be started during system boot up.
+The container will not be auto-started during system boot up unless
+this parameter is set to \fIyes\fR.
 .TP
 \fB--root\fR \fIpath\fR
-Sets the path to root directory for this VE. This is essentially a mount
-point for VE root. Value must contain string \fI$VEID\fR, which will
-be substituted with numeric VE ID. Changing this parameter is not
-recommended, better edit \fBvz.conf\fR(5) global configuration file.
+Sets the path to root directory for this container. This is essentially a mount
+point for container's root directory. The value must contain string
+\fI$VEID\fR, which will be substituted with the numeric CT ID.
+Changing this parameter is not recommended, better edit
+\fBvz.conf\fR(5) global configuration file.
 .TP
 \fB--userpasswd\fR \fIuser\fR:\fIpassword\fR
-Sets password for the given user in VE, creating the user if it does not exists.
+Sets password for the given user in a container, creating the user if
+it does not exists.
 Note that this option is not saved in configuration file at all (so
-\fB--save\fR flag is useless), it is applied to VE (by modifying its
+\fB--save\fR flag is useless), it is applied to the container (by modifying its
 \fB\f(CR/etc/passwd\fR and \fB\f(CR/etc/shadow\fR files).
 
-In case VE root is not mounted, it is automatically mounted, then all
-appropriate file changes are applied, then it is unmounted.
+In case container root filesystem is not mounted, it is automatically mounted,
+then all the appropriate file changes are applied, then it is unmounted.
 
-Note that VE area should be created before using this option.
+Note that container files should be created before using this option.
 .TP
 \fB--disabled\fR \fIyes\fR|\fIno\fR
-Disable VE start. To force the start of a disabled VE, use \fBvzctl start\fR
-with \fB--force\fR option.
+Disable container start. To force the start of a disabled container, use
+\fBvzctl start\fR with \fB--force\fR option.
 .TP
 \fB--name\fR \fIname\fR
-Add a name for a VE. The \fIname\fR can later be used in subsequent calls to
-\fBvzctl\fR in place of \fIveid\fR.
+Add a name for a container. The \fIname\fR can later be used in
+subsequent calls to \fBvzctl\fR in place of \fICTID\fR.
 .TP
 \fB--setmode\fR \fIrestart\fR|\fIignore\fR
-Whether to restart a VE after applying any parameters requiring that
-the VE be restarted for those to take effect.
+Whether to restart a container after applying any parameters requiring that
+the container be restarted for those to take effect.
 .TP
 \fBNetwork related parameters\fR
 .TP
 \fB--ipadd\fR \fIaddr\fR
-Adds IP address to a given VE. Note that this option is incremental, so
+Adds IP address to a given container. Note that this option is incremental, so
 \fIaddr\fR are added to already existing ones.
 .TP
 \fB--ipdel\fR \fIaddr\fR | \fBall\fR
-Removes IP address \fIaddr\fR from a VE. If you want to remove all addresses,
-use \fB--ipdel all\fR.
+Removes IP address \fIaddr\fR from a container. If you want to remove all
+the addresses, use \fB--ipdel all\fR.
 .TP
 \fB--hostname\fR \fIname\fR
-Sets VE hostname. \fBvzctl\fR writes it to the appropriate file inside a VE
-(distribution-dependent).
+Sets container hostname. \fBvzctl\fR writes it to the appropriate file inside a
+container (distribution-dependent).
 .TP
 \fB--nameserver\fR \fIaddr\fR
-Sets DNS server IP address for a VE. If you want to set several nameservers,
-you should do it at once, so use \fB--nameserver\fR option multiple times
-in one call to \fBvzctl\fR, as all the name server values set in previous
-calls to \fBvzctl\fR gets overwritten.
+Sets DNS server IP address for a container. If you want to set several
+nameservers, you should do it at once, so use \fB--nameserver\fR option
+multiple times in one call to \fBvzctl\fR, as all the name server values
+set in previous calls to \fBvzctl\fR gets overwritten.
 .TP
 \fB--searchdomain\fR \fIname\fR
-Sets DNS search domains for a VE. If you want to set several search domains,
-you should do it at once, so use \fB--searchdomain\fR option multiple times
-in one call to \fBvzctl\fR, as all the search domain values set in previous
-calls to \fBvzctl\fR gets overwritten.
+Sets DNS search domains for a container. If you want to set several search
+domains, you should do it at once, so use \fB--searchdomain\fR option
+multiple times in one call to \fBvzctl\fR, as all the search domain values
+set in previous calls to \fBvzctl\fR gets overwritten.
 .TP
 \fB--netif_add\fR \fIifname[\fR,\fImac\fR,\fIhost_ifname\fR,\fIhost_mac]\fR
-Adds a virtual ethernet device (veth) to a given VE. Here \fIifname\fR is
-the ethernet device name in the VE, \fImac\fR is its MAC address,
+Adds a virtual ethernet device (veth) to a given container. Here \fIifname\fR
+is the ethernet device name in the container, \fImac\fR is its MAC address,
 \fIhost_ifname\fR is the ethernet device name on the host, and
 \fIhost_mac\fR is its MAC address. MAC addresses should be in the format
 like XX:XX:XX:XX:XX:XX. All parameters except \fIifname\fR are optional
 and are automatically generated if not specified.
+.TP
+\fB--netif_del\fR \fIdev_name\fR|\fBall\fR
+Removes virtual ethernet device from a container. If you want to remove all
+devices, use \fBall\fR.
 .TP
 \fBInterface configuration\fR
 
 The following options can be used to reconfigure the already-created virtual
 ethernet interface. To select the interface to configure, use
 \fB--ifname\fR \fIname\fR option.
-
- \fB--mac\fR \fIXX:XX:XX:XX:XX:XX\fR - MAC address of interface inside VE.
- \fB--host_ifname\fR \fIname\fR - interface name for virtual interface in VE0.
- \fB--host_mac\fR \fIXX:XX:XX:XX:XX:XX\fR - MAC address of interface in VE0.
 .TP
-\fB--netif_del\fR \fIdev_name\fR|\fBall\fR
-Removes virtual ethernet device from VE. If you want to remove all devices,
-use \fBall\fR.
+\fB--mac\fR \fIXX:XX:XX:XX:XX:XX\fR
+MAC address of interface inside a container.
+.TP
+\fB--host_ifname\fR \fIname\fR
+interface name for virtual interface in the host system.
+.TP
+\fB--host_mac\fR \fIXX:XX:XX:XX:XX:XX\fR
+MAC address of interface in the host system.
 .TP
 \fBResource limits\fR
 
@@ -137,7 +146,7 @@ is architecture-specific, it is 4096 bytes on IA32 platform.
 
 You can also specify different suffixes for \fBset\fR parameters
 (except for the parameters which names start with \fBnum\fR).
-For example, \fBvzctl set\fR \fIveid\fR \fB--privvmpages 5M:6M\fR
+For example, \fBvzctl set\fR \fICTID\fR \fB--privvmpages 5M:6M\fR
 should set \fBprivvmpages\fR' barrier to 5 megabytes and its limit
 to 6 megabytes.
 
@@ -177,8 +186,8 @@ the limit to different values does not make practical sense.
 .TP
 \fB--vmguarpages\fR \fIpages\fR[:\fIpages\fR]
 Memory allocation guarantee. This parameter controls how much memory is
-available to a VE. The barrier is the amount
-of memory that VE's applications are guaranteed to be able to allocate.
+available to a container. The barrier is the amount
+of memory that container's applications are guaranteed to be able to allocate.
 The meaning of the limit is currently unspecified; it should be set to
 \fBunlimited\fR.
 .TP
@@ -188,8 +197,8 @@ Maximum amount of kernel memory used. This parameter is related to
 16 KB at leas, 30-50 KB typically. Very large processes may consume
 a bit more. It is important to have a certain safety gap between the
 barrier and the limit of this parameter: equal barrier and limit may
-lead to the situation where the kernel will need to kill VE applications
-to keep the \fBkmemsize\fR usage under the limit.
+lead to the situation where the kernel will need to kill container's
+applications to keep the \fBkmemsize\fR usage under the limit.
 .TP
 \fB--tcpsndbuf\fR \fIbytes\fR[:\fIbytes\fR]
 Maximum size of TCP send buffers.
@@ -204,42 +213,43 @@ barrier and limit should be equal to or more than value of
 \fBnumtcpsock\fR multiplied by 2.5 KB.
 .TP
 \fB--othersockbuf\fR \fIbytes\fR[:\fIbytes\fR]
-Maximum size of other (non-TCP) socket send buffers. If VE processes needs
-to send very large datagrams, the barrier should be set accordingly.
+Maximum size of other (non-TCP) socket send buffers. If container's processes
+needs to send very large datagrams, the barrier should be set accordingly.
 Increased limit is necessary for high performance of communications through
 local (UNIX-domain) sockets.
 .TP
 \fB--dgramrcvbuf\fR \fIbytes\fR[:\fIbytes\fR]
-Maximum size of other (non-TCP) socket receive buffers. If VE processes
-needs to send very large datagrams, the barrier should be set accordingly.
-The difference between the barrier and the limit is not needed.
+Maximum size of other (non-TCP) socket receive buffers. If container's
+processes needs to receive very large datagrams, the barrier should be set
+accordingly. The difference between the barrier and the limit is not needed.
 .TP
 \fB--oomguarpages\fR \fIpages\fR[:\fIpages\fR]
 Guarantees against OOM kill. Under this beancounter the kernel accounts the
-total amount of memory and swap space used by the VE processes. The barrier
-of this parameter is the out-of-memory guarantee. If the oomguarpages usage
-is below the barrier, processes of this VE are guaranteed not to be killed
-in out-of-memory situations. The meaning of limit is currently unspecified;
-it should be set to \fBunlimited\fR.
+total amount of memory and swap space used by the container's processes.
+The barrier of this parameter is the out-of-memory guarantee. If the
+\fBoomguarpages\fR usage is below the barrier, processes of this container
+are guaranteed not to be killed in out-of-memory situations.
+The meaning of limit is currently unspecified; it should be set to
+\fBunlimited\fR.
 .TP
 \fB--lockedpages\fR \fIpages\fR[:\fIpages\fR]
 Maximum number of pages acquired by \fBmlock\fR(2).
 .TP
 \fB--privvmpages\fR \fIpages\fR[:\fIpages\fR]
 Allows controlling the amount of memory allocated by the applications.
-For shared (mapped as \fBMAP_SHARED\fR) pages, each VE really using a memory
-page is charged for the fraction of the page (depending on the number of
-others using it). For "potentially private" pages (mapped as
-\fBMAP_PRIVATE\fR), VE is charged either for a fraction of the size or for
-the full size if the allocated address space. It the latter case, the physical
-pages associated with the allocated address space may be in memory, in swap
-or not physically allocated yet.
+For shared (mapped as \fBMAP_SHARED\fR) pages, each container really using
+a memory page is charged for the fraction of the page (depending on the
+number of others using it). For "potentially private" pages (mapped as
+\fBMAP_PRIVATE\fR), container is charged either for a fraction of the size
+or for the full size if the allocated address space. In the latter case,
+the physical pages associated with the allocated address space may be
+in memory, in swap or not physically allocated yet.
 
 The barrier and the limit of this parameter
 control the upper boundary of the total size of allocated memory. Note that
-this upper boundary does not guarantee that VE will be able to allocate that
-much memory. The primary mechanism to control memory allocation is
-the \fB--vmguarpages\fR guarantee.
+this upper boundary does not guarantee that container will be able
+to allocate that much memory. The primary mechanism to control memory
+allocation is the \fB--vmguarpages\fR guarantee.
 .TP
 \fB--shmpages\fR \fIpages\fR[:\fIpages\fR]
 Maximum IPC SHM segment size.
@@ -255,7 +265,7 @@ the limit to different values does not make practical sense.
 Maximum number of file locks. Safety gap should be between barrier and limit.
 .TP
 \fB--numpty\fR \fIitems\fR[:\fIitems\fR]
-Number of pseudo-terminals (PTY). Note that in OpenVZ each VE can have
+Number of pseudo-terminals (PTY). Note that in OpenVZ each container can have
 not more than 255 PTYs. Setting the barrier and
 the limit to different values does not make practical sense.
 .TP
@@ -279,40 +289,40 @@ the limit to different values does not make practical sense.
 .TP
 \fB--physpages\fR \fIpages\fR[:\fIpages\fR]
 This is currently an accounting-only parameter. It shows the usage of RAM
-by this VE. Barrier should be set to 0, and limit should be set to
+by this container. Barrier should be set to 0, and limit should be set to
 \fBunlimited\fR.
 .TP
 \fBCPU fair scheduler parameters\fR
 
-These parameters control CPU usage by VE.
+These parameters control CPU usage by container.
 .TP
 \fB--cpuunits\fR \fInum\fR
-CPU weight for a VE. Argument is positive non-zero number, which passed to
-and used in kernel fair scheduler. The larger the number is, the more CPU time
-this VE get. Maximum value is 500000, minimal is 8. Number is relative to
-weights of all the other running VEs. If cpuunits not specified default value
-1000 ia used.
+CPU weight for a container. Argument is positive non-zero number, passed to
+and used in the kernel fair scheduler. The larger the number is, the more
+CPU time this container gets. Maximum value is 500000, minimal is 8.
+Number is relative to weights of all the other running containers.
+If \fBcpuunits\fR are not specified, default value of 1000 is used.
 
-You can set CPU weight for VE0 (hardware node itself) as well
+You can set CPU weight for CT0 (host system itself) as well
 (use \fBvzctl set 0 --cpuunits \fInum\fR). Usually, OpenVZ initscript
-(/etc/init.d/vz) takes care of setting this.
+(\fB/etc/init.d/vz\fR) takes care of setting this.
 .TP
 \fB--cpulimit\fR \fInum\fR[\fB%\fR]
-Limit of CPU usage for the VE, in per cent.
+Limit of CPU usage for the container, in per cent.
 Note if the computer has 2 CPUs, it has total of 200% CPU time. Default CPU
 limit is 0 (no CPU limit).
 .TP
 \fB--cpus\fR \fInum\fR
-sets number of CPUs available in the VE.
+sets number of CPUs available in the container.
 .TP
 \fBMemory output parameters\fR
 
-This parameter control output of /proc/meminfo inside a VE
+This parameter control output of /proc/meminfo inside a container 
 .IP "\fB--meminfo\fR \fBnone\fR
 No /proc/meminfo virtualization (the same as on host system).
 .IP "\fB--meminfo\fR \fBmode\fR:\fIvalue\fR"
-Configure total memory output in a VE. Free memory is evaluated accordingly
-to the mode being set.
+Configure total memory output in a container. Reported free memory is evaluated
+accordingly to the mode being set.
 .br
 You can use the following modes for \fImode\fR:
 .br
@@ -326,8 +336,8 @@ Default is \fBprivvmpages:1\fR.
 \fBIptables control parameters\fR
 .TP
 .IP "\fB--iptables\fR \fIname\fR"
-Restrict access to iptables modules inside a VE (by default all iptables
-modules that are loaded in the host system are accessible inside a VE).
+Restrict access to iptables modules inside a container (by default all iptables
+modules that are loaded in the host system are accessible inside a container).
 
 You can use the following values for \fIname\fR:
 \fBiptable_filter\fR, \fBiptable_mangle\fR, \fBipt_limit\fR,
@@ -340,9 +350,9 @@ You can use the following values for \fIname\fR:
 .TP
 \fBNetwork devices control parameters\fR
 .IP "\fB--netdev_add\fR \fIname\fR"
-move network device from VE0 to a specified VE
+move network device from the host system to a specified container
 .IP "\fB--netdev_del\fR \fIname\fR"
-delete network device from a specified VE
+delete network device from a specified container
 .TP
 \fBDisk quota parameters\fR
 .TP
@@ -360,12 +370,12 @@ second is hard quota.
 sets soft overusage time limit for disk quota (also known as grace period).
 .TP
 \fB--quotaugidlimit\fR \fInum\fR
-sets maximum number of user/group IDs in a VE for which disk quota inside
-the VE will be accounted. If this value is set to \fB0\fR, user and group
-quotas will not be accounted inside the VE.
+sets maximum number of user/group IDs in a container for which disk quota inside
+the container will be accounted. If this value is set to \fB0\fR, user and group
+quotas inside the container will not be accounted.
 
 Note that if you have previously set value of this parameter to \fB0\fR,
-changing it while the VE is running will not take effect.
+changing it while the container is running will not take effect.
 .TP
 \fBMount option\fR
 .TP
@@ -375,10 +385,11 @@ Sets noatime flag (do not update inode access times) on file system.
 \fBCapability option\fR
 .TP
 \fB--capability\fR \fIcapname\fR:\fBon\fR|\fBoff\fR
-Sets capability inside a VE. Note that setting capability when the VE
-is running does not take immediate effect; restart VE in order for
-changes to take effect. Note a VE has default set of capabilities, thus any
-operation on capabilities is "logical and" with the default capability mask.
+Sets a capability for a container. Note that setting capability when
+the container is running does not take immediate effect; restart the container
+in order for the changes to take effect. Note a container has default set
+of capabilities, thus any operation on capabilities is "logical and"
+with the default capability mask.
 
 You can use the following values for \fIcapname\fR:
 \fBchown\fR, \fBdac_override\fR, \fBdac_read_search\fR, \fBfowner\fR,
@@ -393,122 +404,129 @@ You can use the following values for \fIcapname\fR:
 
 \fBWARNING\fR: setting some of those capabilities may have far reaching security
 implications, so do not do it unless you know what you are doing. Also note
-that setting \fBsetpcap:on\fR for a VE will most probably lead to inability
-to start it.
+that setting \fBsetpcap:on\fR for a container will most probably lead to
+inability to start it.
 .TP
 \fBDevice access management\fR
 .TP
 \fB--devnodes\fR \fIdevice\fR:\fBr|w|rw|none\fR
-Give the VE an access (\fBr\fR - read, \fBw\fR - write, \fBrw\fR - read write, \fBnone\fR - no access) to a device designated by the special file /dev/\fIdevice\fR. Device file is created in VE by vzctl.
+Give the container an access (\fBr\fR - read only, \fBw\fR - write only,
+\fBrw\fR - read/write, \fBnone\fR - no access) to a device designated
+by the special file /dev/\fIdevice\fR. Device file is created in a container
+by \fBvzctl\fR.
 .TP
 \fB--devices\fR \fBb|c\fR:\fImajor\fR:\fIminor\fR|\fBall\fR:[\fBr\fR|\fBw\fR|\fBrw\fR|\fBnone\fR]
-Give the VE an access to a \fBb\fRlock or \fBc\fRharacter device
+Give the container an access to a \fBb\fRlock or \fBc\fRharacter device
 designated by its \fImajor\fR and \fIminor\fR numbers. Device file have to be created manually.
 .TP
 \fBFeatures management\fR
 .TP
 \fB--features\fR \fIname\fR:\fBon|off\fR
-Enable or disable a specific VE feature.
+Enable or disable a specific container feature.
 Known features are: \fIsysfs\fR, \fInfs\fR.
 .TP
 \fBApply config\fR
 .TP
 \fB--applyconfig\fR \fIname\fR
-Read VE parameters from the VE sample configuration file
+Read container parameters from the container sample configuration file
 \f(CW\fB/etc/vz/conf/ve-\fIname\fR\f(CW\fB.conf-sample\fR, and
-apply them, if --save option specified save to the VE config file.
+apply them, if --save option specified save to the container config file.
 The following parameters are not changed: \fBHOSTNAME\fR, \fBIP_ADDRESS\fR,
 \fBOSTEMPLATE\fR, \fBVE_ROOT\fR, and \fBVE_PRIVATE\fR.
 .TP
-\fB--applyconfig_map\fR \fIname\fR
-Apply VE config parameters selected by \fIname\fR group, now only \fIname\fR argument
-supported. Restore VE name based on NAME variable in VE configuration file.
+\fB--applyconfig_map\fR \fIgroup\fR
+Apply container config parameters selected by \fIgroup\fR. Now only
+\fRname\fR argument is supported, to restore container name based on NAME
+variable in container configuration file.
 .TP
 \fBI/O priority management\fR
 .TP
 \fB--ioprio\fR \fIpriority\fR
-Assigns I/O priority to VE. \fIPriority\fR range is \fB0-7\fR.
-The greater \fIpriority\fR is, the more time for I/O activity VE has.
-By default each VE has \fIpriority\fR of \fB4\fR.
+Assigns I/O priority to container. \fIPriority\fR range is \fB0-7\fR.
+The greater \fIpriority\fR is, the more time for I/O activity container has.
+By default each container has \fIpriority\fR of \fB4\fR.
 
 .SS Checkpointing and restore
 
 Checkpointing is a feature of OpenVZ kernel which allows to save a complete
-state of a running VE, and to restore it later.
+state of a running container, and to restore it later.
 .TP 4
-\fBchkpnt\fR \fIveid\fR [\fB--dumpfile\fR \fIname\fR]
-This command saves a complete state of a running VE to a dump file,
-and stops the VE. If an option \fB--dumpfile\fR is not set, default
-dump file name \fB/vz/dump/Dump.\fIveid\fR is used.
+\fBchkpnt\fR \fICTID\fR [\fB--dumpfile\fR \fIname\fR]
+This command saves a complete state of a running container to a dump file,
+and stops the container. If an option \fB--dumpfile\fR is not set, default
+dump file name \fB/vz/dump/Dump.\fICTID\fR is used.
 .TP 4
-\fBrestore\fR \fIveid\fR [\fB--dumpfile\fR \fIname\fR]
-This command restores a VE from dump file created by the \fBchkpnt\fR command.
-.SS Performing VE actions
-.IP "\fBcreate\fR \fIveid\fR [\fB--ostemplate\fR \fIname\fR] [\fB--config\fR \fIname\fR] [\fB--private\fR \fIpath\fR] [\fB--root\fR \fIpath\fR] [\fB--ipadd\fR \fIaddr\fR] [\fB--hostname\fR \fIname\fR]" 4
-Creates a new VE area. This operation should be done once, before the first
-start of the VE.
+\fBrestore\fR \fICTID\fR [\fB--dumpfile\fR \fIname\fR]
+This command restores a container from the dump file created by the
+\fBchkpnt\fR command.
+.SS Performing container actions
+.IP "\fBcreate\fR \fICTID\fR [\fB--ostemplate\fR \fIname\fR] [\fB--config\fR \fIname\fR] [\fB--private\fR \fIpath\fR] [\fB--root\fR \fIpath\fR] [\fB--ipadd\fR \fIaddr\fR] [\fB--hostname\fR \fIname\fR]" 4
+Creates a new container area. This operation should be done once, before
+the first start of the container.
 
 If the \fB--config\fR option is specified, values from
 example configuration file
 \f(CW\fB/etc/vz/conf/ve-\fIname\fR\f(CW\fB.conf-sample\fR
-are put into the VE configuration file. If this VE configuration file
-already exists, it will be removed.
+are put into the container configuration file. If this container configuration
+file already exists, it will be removed.
 
 You can use \fB--root\fR \fIpath\fR option to sets the path to the mount
-point for the VE root directory (default is \fBVE_ROOT\fR specified in
+point for the container root directory (default is \fBVE_ROOT\fR specified in
 \fBvz.conf\fR(5) file). Argument can contain string \fI$VEID\fR, which will
-be substituted with numeric VE ID.
+be substituted with numeric CT ID.
 
 You can use \fB--private\fR \fIpath\fR option to set the path to directory
-in which all the files and directories specific to this very VE are stored
-(default is \fBVE_PRIVATE\fR specified in \fBvz.conf\fR(5) file). Argument can
-contain string \fI$VEID\fR, which will be substituted with numeric VE ID.
+in which all the files and directories specific to this very container
+are stored (default is \fBVE_PRIVATE\fR specified in \fBvz.conf\fR(5) file).
+Argument can contain string \fI$VEID\fR, which will be substituted with
+the numeric CT ID.
 
-You can use \fB--ipadd\fR \fIaddr\fR option to assign an IP address to a VE.
-Note that this option can be used multiple times.
+You can use \fB--ipadd\fR \fIaddr\fR option to assign an IP address to a container. Note that this option can be used multiple times.
 
-You can use \fB--hostname\fR \fIname\fR option to set a host name for a VE.
-
+You can use \fB--hostname\fR \fIname\fR option to set a host name for
+a container.
 .IP \fBdestroy\fR 4
-Removes a VE private area by deleting all files, directories and configuration
-file of this VE.
+Removes a container private area by deleting all files, directories and 
+the configuration file of this container.
 .IP "\fBstart\fR [\fB--wait\fR] [\fB--force\fR]" 4
-Mounts (if necessary) and starts a VE. Unless \fB--wait\fR option
+Mounts (if necessary) and starts a container. Unless \fB--wait\fR option
 is specified, \fBvzctl\fR will return immediately; otherwise an attempt to
 wait till the default runlevel is reached will be made by vzctl.
 
-Specify \fB--force\fR if you want to start a VE which is disabled
+Specify \fB--force\fR if you want to start a container which is disabled
 (see \fB--disabled\fR).
 .IP \fBstop\fR 4
-Stops and unmounts a VE.
+Stops and unmounts a container.
 .IP \fBrestart\fR 4
-Restarts a VE, i.e. stops it if it is running, and starts again.
+Restarts a container, i.e. stops it if it is running, and starts again.
 .IP \fBstatus\fR 4
-Shows a VE status. Basically this is a line with five words separated by spaces.
-First word is literally \fBVEID\fR. Second word is the numeric \fIVE ID\fR.
-Third word is showing whether this VE exists or not,
+Shows a container status. This is a line with five words separated by spaces.
+First word is literally \fBCTID\fR. Second word is the numeric \fICT ID\fR.
+Third word is showing whether this container exists or not,
 it can be either \fBexist\fR or \fBdeleted\fR.
-Fourth word is showing the status of the VE filesystem,
+Fourth word is showing the status of the container filesystem,
 it can be either \fBmounted\fR or \fBunmounted\fR.
-Fifth word shows if the VE is running,
+Fifth word shows if the container is running,
 it can be either \fBrunning\fR or \fBdown\fR.
 
 This command can also be usable from scripts.
 .IP \fBmount\fR 4
-Mounts VE private area.
+Mounts container private area.
 .IP \fBumount\fR 4
-Unmounts VE private area. Note that \fBstop\fR does \fBumount\fR automatically.
-.IP "\fBexec\fR \fIveid\fR \fIcommand\fR" 4
-Executes \fIcommand\fR in a VE. Environment variables are not set inside the VE.
+Unmounts container private area. Note that \fBstop\fR does \fBumount\fR
+automatically.
+.IP "\fBexec\fR \fICTID\fR \fIcommand\fR" 4
+Executes \fIcommand\fR in a container. Environment variables are not set
+inside the container.
 Signal handlers may differ from default settings. If \fIcommand\fR is \fB-\fR,
 commands are read from stdin.
-.IP "\fBexec2\fR \fIveid\fR \fIcommand\fR" 4
+.IP "\fBexec2\fR \fICTID\fR \fIcommand\fR" 4
 The same as \fBexec\fR, but return code is that of \fIcommand\fR.
 .IP \fBrunscript\fR 4
-Run specified shell script in a VE, if the VE is not runnning
+Run specified shell script in a container, if the container is not running
 it will be started.
 .IP \fBenter\fR 4
-Enters into a VE. This option is a back-door for host root only.
+Enters into a container. This option is a back-door for host root only.
 .SS Other options
 .IP \fB--help\fR 4
 Prints help message with a brief list of possible options.
@@ -517,8 +535,8 @@ Prints \fBvzctl\fR version.
 .SH DIAGNOSTICS
 Returns 0 upon success.
 .SH EXAMPLES
-To create and start "basic" VE with ID of 1000, using \fIfedora-core-5\fR
-OS template, and IP address of 192.168.10.200:
+To create and start "basic" container with ID of 1000 using
+\fIfedora-core-5\fR OS template and IP address of 192.168.10.200:
 .br
 \f(CR	vzctl create 1000 --ostemplate fedora-core-5 --config vps.basic
 .br
@@ -533,22 +551,22 @@ PTY barrier/limit to 16/20 PTYs:
 \f(CR	vzctl set 1000 --numproc 80:100 -t 16:20 --save
 \fR
 .P
-To execute command \fBls -la\fR in this VE:
+To execute command \fBls -la\fR in this container:
 .br
 \f(CR	vzctl exec 1000 /bin/ls -la
 \fR
 .P
-To execute command pipe \fBls -l / | sort\fR in this VE:
+To execute command pipe \fBls -l / | sort\fR in this container:
 .br
 \f(CR	vzctl exec 1000 'ls -l / | sort'
 \fR
 .P
-To stop this VE:
+To stop this container:
 .br
 \f(CR	vzctl stop 1000
 \fR
 .P
-To permanently remove this VE:
+To permanently remove this container:
 .br
 \f(CR	vzctl destroy 1000
 \fR
@@ -557,7 +575,7 @@ To permanently remove this VE:
 \f(CR
 /etc/vz/vz.conf
 .br
-/etc/vz/conf/veid.conf
+/etc/vz/conf/\fICTID\fR.conf
 .br
 /proc/vz/veinfo
 .br
@@ -571,4 +589,4 @@ To permanently remove this VE:
 .BR vps.conf (5),
 .BR vzquota (8),
 .SH LICENSE
-Copyright (C) 2000-2007, SWsoft. Licensed under GNU GPL v2.
+Copyright (C) 2000-2008, Parallels, Inc. Licensed under GNU GPL.
