Massive VE -> container rename
Only do it in user-visible messages and comments.
Also:
* SWsoft->Parallels
* Copyright years update
* ip -> IP
* VE id, veid -> CT ID
* cpu -> CPU
* 2level quota -> second-level quota
* Some comments changed for better clarity
* Some error messages changed for better clarity
* Remove references to non-existent man pages
* Fixed VE_STATE description (can not be 'stopped')
* Some whitespace management (use tabs instead of spaces in some places)

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/INSTALL
+++ b/INSTALL
@@ -51,7 +51,7 @@ Supply this option in case you do not use udev on your system.
 	--disable-cron
 
 Disables installation of cron files required by vzctl. Those are used to run
-periodical jobs required by OpenVZ, such as restarting VEs and cleaning up
+periodical jobs required by OpenVZ, such as restarting CTs and cleaning up
 host system routing table. Supply this option if you do not use cron daemon
 on your system.
 
