--- a/man/vzctl.8
+++ b/man/vzctl.8
@@ -105,12 +105,14 @@ domains, you should do it at once, so use \fB--searchdomain\fR option
 multiple times in one call to \fBvzctl\fR, as all the search domain values
 set in previous calls to \fBvzctl\fR gets overwritten.
 .TP
-\fB--netif_add\fR \fIifname[\fR,\fImac\fR,\fIhost_ifname\fR,\fIhost_mac]\fR
+\fB--netif_add\fR \fIifname[\fR,\fImac\fR,\fIhost_ifname\fR,\fIhost_mac\fR,\fIbridge]\fR
 Adds a virtual ethernet device (veth) to a given container. Here \fIifname\fR
 is the ethernet device name in the container, \fImac\fR is its MAC address,
 \fIhost_ifname\fR is the ethernet device name on the host, and
 \fIhost_mac\fR is its MAC address. MAC addresses should be in the format
-like XX:XX:XX:XX:XX:XX. All parameters except \fIifname\fR are optional
+like XX:XX:XX:XX:XX:XX. \fIbridge\fR is an optional parameter which can be
+used in custom network start scripts to automatically add the interface
+to a bridge. All parameters except \fIifname\fR are optional
 and are automatically generated if not specified.
 .TP
 \fB--netif_del\fR \fIdev_name\fR|\fBall\fR
@@ -131,6 +133,10 @@ interface name for virtual interface in the host system.
 .TP
 \fB--host_mac\fR \fIXX:XX:XX:XX:XX:XX\fR
 MAC address of interface in the host system.
+.TP
+\fB--bridge\fR \fIname\fR
+Bridge name. Custom network start scripts can use this value to automatically
+add the interface to a bridge.
 .TP
 \fB--mac_filter\fR \fIon|off\fR
 Enables/disables MAC address filtering for the Container veth device and
