man/vzctl.8: trivial formatting fix
Variables are italic; literal values are bold.

--- a/man/vzctl.8
+++ b/man/vzctl.8
@@ -340,7 +340,7 @@ sets number of CPUs available in the container.
 This parameter control output of /proc/meminfo inside a container 
 .IP "\fB--meminfo\fR \fBnone\fR
 No /proc/meminfo virtualization (the same as on host system).
-.IP "\fB--meminfo\fR \fBmode\fR:\fIvalue\fR"
+.IP "\fB--meminfo\fR \fImode\fR:\fIvalue\fR"
 Configure total memory output in a container. Reported free memory is evaluated
 accordingly to the mode being set.
 .br
