vzctl, vzlist: implement --description option
Implementation of --description option

http://bugzilla.openvz.org/311

[kir@openvz.org: use strdup(); man pages changes]

--- a/man/vps.conf.5
+++ b/man/vps.conf.5
@@ -23,6 +23,8 @@ the appropriate \fBvzctl set\fR option is given.
 .SS Miscellaneous parameters
 .IP \fBNAME\fR="\fIvename\fR"
 Corresponds to the \fB--name\fR option.
+.IP \fBDESCRIPTION\fR="\fIstring\fR"
+Corresponds to the \fB--description\fR option.
 .IP \fBONBOOT\fR="\fByes\fR|\fBno\fR"
 Specifies whether this container will be started during system bootup.
 Default is \fBno\fR, meaning the container will not be started
