--- a/man/vzctl.8
+++ b/man/vzctl.8
@@ -75,6 +75,9 @@ Disable container start. To force the start of a disabled container, use
 Add a name for a container. The \fIname\fR can later be used in
 subsequent calls to \fBvzctl\fR in place of \fICTID\fR.
 .TP
+\fB--description\fR \fIstring\fR
+Add a textual description for a container.
+.TP
 \fB--setmode\fR \fIrestart\fR|\fIignore\fR
 Whether to restart a container after applying any parameters requiring that
 the container be restarted for those to take effect.
