man/*: punctuation fixes in SEE ALSO sections
Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/man/arpsend.8
+++ b/man/arpsend.8
@@ -58,6 +58,6 @@ Interface you use have to be arpable and not be loopback (i.e.
 \fB/sbin/ip link show \fIinterface\fR should show neither \fBNOARP\fR
 not \fBLOOPBACK\fR flags in interface parameters).
 .SH SEE ALSO
-.BR vzctl (8),
+.BR vzctl (8).
 .SH LICENSE
 Copyright (C) 2000-2008, Parallels, Inc. Licensed under GNU GPL.
