--- a/man/vzctl.8
+++ b/man/vzctl.8
@@ -610,6 +610,6 @@ To permanently remove this container:
 .SH SEE ALSO
 .BR vz.conf (5),
 .BR vps.conf (5),
-.BR vzquota (8),
+.BR vzquota (8).
 .SH LICENSE
 Copyright (C) 2000-2008, Parallels, Inc. Licensed under GNU GPL.
