--- a/man/vzmigrate.8
+++ b/man/vzmigrate.8
@@ -99,7 +99,7 @@ Operation with CT quota failed.
 
 
 .SH SEE ALSO
-.BR rsync (1)
+.BR rsync (1).
 
 .SH COPYRIGHT
 Copyright (C) 2001-2008, Parallels, Inc. Licensed under GNU GPL.
