Rename sample config file 'vps.basic' to 'basic'
Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/man/vzctl.8
+++ b/man/vzctl.8
@@ -561,7 +561,7 @@ Returns 0 upon success.
 To create and start "basic" container with ID of 1000 using
 \fIfedora-core-5\fR OS template and IP address of 192.168.10.200:
 .br
-\f(CR	vzctl create 1000 --ostemplate fedora-core-5 --config vps.basic
+\f(CR	vzctl create 1000 --ostemplate fedora-core-5 --config basic
 .br
 \f(CR	vzctl set 1000 --ipadd 192.168.10.200 --save
 .br
