vzctl: add 'delete' alias for 'destroy' command.
Now one can either use "destroy" or "delete", whichever sounds better.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/man/vzctl.8
+++ b/man/vzctl.8
@@ -508,7 +508,7 @@ You can use \fB--ipadd\fR \fIaddr\fR option to assign an IP address to a contain
 
 You can use \fB--hostname\fR \fIname\fR option to set a host name for
 a container.
-.IP \fBdestroy\fR 4
+.IP "\fBdestroy\fR | \fBdelete\fR" 4
 Removes a container private area by deleting all files, directories and 
 the configuration file of this container.
 .IP "\fBstart\fR [\fB--wait\fR] [\fB--force\fR]" 4
