Add --force parameter to vzctl set --save
With --force, vzctl set --save can continue even when run
on a non-OpenVZ kernel. This is useful to create initial
configuration before rebooting with an OpenVZ kernel. It's
the case when you configure the containers within a standard
installer like debian-installer.

http://bugzilla.openvz.org/show_bug.cgi?id=847
http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=470490

Based on a patch made by Jérémy Bobbio <lunar@debian.org>.

--- a/man/vzctl.8
+++ b/man/vzctl.8
@@ -33,9 +33,11 @@ Disables logging to log file and screen.
 .IP \fB--verbose\fR 4
 Sets logging level to maximum value.
 .SS Setting container parameters
-.IP "\fBset\fR \fICTID\fR [\fIparameters\fR] [\fB--save\fR]" 4
+.IP "\fBset\fR \fICTID\fR [\fIparameters\fR] [\fB--save\fR] [\fB--force\fR]" 4
 This command sets various container parameters. If a \fB--save\fR flag is given,
 parameters are saved in container configuration file \fBvps.conf\fR(5).
+Use \fB--force\fR to save the parameters even if the current kernel
+doesn't support OpenVZ.
 If a container is currently running, \fBvzctl\fR applies these parameters
 to the container.
 
