--- a/man/vzctl.8
+++ b/man/vzctl.8
@@ -315,6 +315,15 @@ This is currently an accounting-only parameter. It shows the usage of RAM
 by this container. Barrier should be set to 0, and limit should be set to
 \fBunlimited\fR.
 .TP
+\fB--swappages\fR \fIpages\fR[:\fIpages\fR]
+The limit, if set, is used to show a total amount of swap space available
+inside the container. The barrier of this parameter is currently ignored.
+The default value is \fBunlimited\fR, meaning total swap will be reported
+as 0.
+
+Note that in order for the value to be shown as total swap space,
+\fB--meminfo\fR parameter should be set to value other than \fBnone\fR.
+.TP
 \fBCPU fair scheduler parameters\fR
 
 These parameters control CPU usage by container.
@@ -345,7 +354,8 @@ This parameter control output of /proc/meminfo inside a container
 No /proc/meminfo virtualization (the same as on host system).
 .IP "\fB--meminfo\fR \fImode\fR:\fIvalue\fR"
 Configure total memory output in a container. Reported free memory is evaluated
-accordingly to the mode being set.
+accordingly to the mode being set. Reported swap is evaluated
+according to the settings of \fB--swappages\fR parameter.
 .br
 You can use the following modes for \fImode\fR:
 .br
