man/vzctl.8: add reference to capabilities(7).
As suggested in http://bugzilla.openvz.org/1323
Thanks to М. Alhimenko.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/man/vzctl.8
+++ b/man/vzctl.8
@@ -435,7 +435,8 @@ You can use the following values for \fIcapname\fR:
 \fBsys_chroot\fR, \fBsys_ptrace\fR, \fBsys_pacct\fR,
 \fBsys_admin\fR, \fBsys_boot\fR, \fBsys_nice\fR, \fBsys_resource\fR,
 \fBsys_time\fR, \fBsys_tty_config\fR, \fBmknod\fR, \fBlease\fR,
-\fBsetveid\fR, \fBve_admin\fR.
+\fBsetveid\fR, \fBve_admin\fR. For detailed description, see
+.BR capabilities (7).
 
 \fBWARNING\fR: setting some of those capabilities may have far reaching security
 implications, so do not do it unless you know what you are doing. Also note
